--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,17 @@
+@import "sass/utils";
+
 .wrap {
+    min-height:100vh;
+    box-sizing: border-box;
 
     .wrap__content{
+        max-width:$app-max-width;
+        margin-left:auto;
+        margin-right:auto;
+        box-shadow: 0 0 30px 0 #ececec;
+        border-radius: 1em;
+        padding: 20px;
+        padding-bottom:40px;
+        margin-top:20px;
     }
 }
