--- a/src/layout/Header.scss
+++ b/src/layout/Header.scss
@@ -11,7 +11,7 @@
         align-items: center;
         justify-content: start;
         height:100%;
-        max-width:1000px;
+        max-width:$app-max-width;
         margin: 0 auto 0 auto;
         
         .logo{
@@ -45,6 +45,7 @@
                         letter-spacing: 3px;
                         text-transform: uppercase;
                         outline:none;
+                        text-decoration: none;
                         
                         &:active{
                             color:orange;
