--- a/src/sass/public.scss
+++ b/src/sass/public.scss
@@ -1,3 +1,9 @@
 html, body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding:0;
+    margin:0;
+}
+
+h1{
+    font-size: 25px;
 }
