--- a/src/components/reaction-table/ReactionTableContainer.scss
+++ b/src/components/reaction-table/ReactionTableContainer.scss
@@ -1,17 +1,34 @@
+@mixin table-item {
+    display:inline-block;
+    padding:5px;
+    border:1px solid #ececec;
+    text-align:center;
+    box-sizing: border-box;
+}
+
+
 .reaction-table-container{
+    width:100%;
+    max-width:700px;
+    margin-top:10px;
 
     .reaction-table{
-        display:inline-block;
-        width:100%;
-        max-width:700px;
-        margin-top:5px;
-        
-        > .item{
-            display:inline-block;
-            width:100px;
-            padding:5px;
-            border:1px solid #ececec;
-            text-align:center;
+
+        .aver{
+
+            > .item{
+                width:100%;
+                @include table-item;
+            }
+        }
+
+        .children{
+            margin-top:10px;
+
+            > .item{
+                width:25%;
+                @include table-item;
+            }
         }
     }
 }
