--- a/src/components/reaction/ReactionContainer.scss
+++ b/src/components/reaction/ReactionContainer.scss
@@ -6,6 +6,8 @@
     color:#ececec;
     font-weight:400;
     font-family: sans-serif;
+    cursor:default;
+    user-select: none;
 
     > .content{
         position: relative;
